# highlands

./: .gitignore  CMakeLists.txt
src/: Camera.cpp  Camera.h  Player.cpp  Player.h  Tile.cpp  Tile.h  main.cpp
src/core/: Camera.cpp  Camera.h  Game.cpp  Game.h
src/managers/: FpsManager.cpp  FpsManager.h
